<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:srcCompat="@drawable/image" />

    <Button
        android:id="@+id/button4"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#EDE7E7"
        android:text="@string/search_contact"
        android:textColor="@color/Black"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="22dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4"
        app:layout_constraintVertical_bias="0.551"
        app:srcCompat="@drawable/search_icon" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:srcCompat="@drawable/image__4_" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:srcCompat="@drawable/image__3_" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:srcCompat="@drawable/image__2_" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:srcCompat="@drawable/image__5_" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView23"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image__6_" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/yasiru"
        android:textColor="@color/Black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView57"
        app:layout_constraintEnd_toEndOf="@+id/textView57"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView57"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.901" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/dahasun"
        android:textColor="@color/Black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="@+id/textView19"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/pulasthi"
        android:textColor="@color/Black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/chavidu"
        android:textColor="@color/Black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="100dp"
        android:text="@string/nisalka"
        android:textColor="@color/Black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/malisha"
        android:textColor="@color/Black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView58"
        app:layout_constraintEnd_toEndOf="@+id/textView58"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView58"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="44dp"
        android:text="@string/how_was_your_week"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toEndOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="44dp"
        android:text="@string/at_work"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toEndOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="200dp"
        android:layout_height="21dp"
        android:layout_marginBottom="216dp"
        android:text="@string/enjoy"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toEndOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/free"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/nav_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="45dp"
        android:layout_height="34dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toStartOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@drawable/account" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="41dp"
        android:layout_height="37dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view9"
        app:srcCompat="@drawable/chat" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView28"
        app:layout_constraintEnd_toStartOf="@+id/imageView28"
        app:layout_constraintTop_toTopOf="@+id/imageView28"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/contact_book" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="37dp"
        android:layout_height="43dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView27"
        app:layout_constraintEnd_toStartOf="@+id/imageView27"
        app:layout_constraintTop_toTopOf="@+id/imageView27"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@drawable/telephone_call" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/busy"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toEndOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/available"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/imageView5" />


</androidx.constraintlayout.widget.ConstraintLayout>
